# cxx_learn

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  tmp.txt
AssemblyStudy/: CMakeLists.txt  swap.cpp
Atomic/: CMakeLists.txt  README.md  benign_data_racing_test.cpp  memory_order_demo.cpp  memory_order_test.cpp  test.cpp
Atomic/notes/: memory_order.md
BitProxy/: CMakeLists.txt  README.md  bench.cpp
Branch/: CMakeLists.txt  bench.cpp
Cache/: CMakeLists.txt  README.md  bench.cpp
CopyVsMemcpy/: CMakeLists.txt  bench.cpp
CrossProductVecLen/: CMakeLists.txt  CrossProductBench.cpp  CrossProductLenBench.cpp  ElementWiseProductBench.cpp  VectorOps.cpp  VectorOps.h  VectorOpsBench.cpp  fmaBench.cpp  test.cpp
FalseSharing/: CMakeLists.txt  bench.cpp
GEMM/: CMakeLists.txt  README.md  bench.cpp  dgemm_nn.h  gemm.hpp  test.cpp  ulmBLASgemm.hpp
IEEEFloat/: CMakeLists.txt  README.md  cancellation.cpp  decimal_rounding.cpp  kahan_sum.cpp  main.cpp  time_step_accumulation.cpp  ulp_spacing.cpp
IEEEFloat/notes/: cancellation.md  decimal_rounding.md  float32_layout.md  kahan_sum.md  time_step_accumulation.md  ulp_spacing.md
MatrixTranspose/: CMakeLists.txt  bench.cpp  test.cpp  transpose.hpp
ParallelSort/: CMakeLists.txt  bench.cpp  parallel_sort.h  parallel_sort_tests.cpp  radix_sort.cpp  radix_sort.h  radix_sort_test.cpp
Pow/: CMakeLists.txt  bench.cpp
RegisterLatency/: CMakeLists.txt  README.md  bench.cpp
Search/: CMakeLists.txt  bench.cpp
SkipCopy/: CMakeLists.txt  bench.cpp
TemplateMetaprogramming/: CMakeLists.txt  README.md  always_false_trick.hpp  main.cpp  sfinae_tricks.hpp  tuple_filtering.hpp  type_selection.hpp
TwoComplement/: CMakeLists.txt  README.md  main.cpp
TypeDeduction/: CMakeLists.txt  main.cpp
cmake/: config.h.in
cuda/: CMakeLists.txt  bank_conflict_bench.cu  gpu_info.cu  gram_schmidt.cu  gram_schmidt.h  gram_schmidt_bench.cpp  gram_schmidt_demo.cpp  gram_schmidt_test.cpp  graph_transpose.cu  graph_transpose.cuh  graph_transpose_bench.cu  graph_transpose_test.cu  memory_allocation_bench.cu  memory_stride_bench.cu  merge_radix_bench.cu  mtx_reader.h  permutation_bench.cpp  permutation_bench.cu  permutation_cpu.cpp  permutation_cuda.cu  permutation_test.cu  permute.hpp  precision_comparison_test.cpp  sort_and_unique.cu
cuda/PMPP/: CMakeLists.txt  bench.cpp  convolution.cu  convolution.h  gemm.cu  gemm.h  gemm_comparison.h  gemm_demo.cpp  merge.cu  merge.cuh  merge_bench.cpp  merge_test.cpp  radix_sort.cu  radix_sort.cuh  radix_sort_bench.cu  radix_sort_test.cpp  reduction.cu  reduction.h  test.cpp  vector_add.cu  vector_add.h
cuda/PMPP/bfs/: CMakeLists.txt  README.md  bfs.cu  bfs.h  bfs_bench.cu
cuda/PMPP/bfs/samples/: tiny_symmetric.mtx
cuda/PMPP/gemm/: CMakeLists.txt  CUTLASS_SGEMM_GUIDE.md  README.md  cutlass_sgemm_bench.cu  cutlass_sgemm_example.cu  ncu_profile_analysis.md  ncu_tiled16_tileA_layout_analysis.md  ncu_tiled16_vs_4x4_analysis.md  profile_ncu.py  sgemm.cu  sgemm.h  sgemm_bench.cu  sgemm_test.cu
cuda/PMPP/reduction/: CMakeLists.txt  README.md  reduction_sum.cu  reduction_sum.h  reduction_sum_bench.cpp  reduction_sum_test.cpp
cuda/scratch/: CMakeLists.txt  cub_practice.cu  thrust_practice.cu
misc/: CMakeLists.txt  Vector.h  bench.cpp  func.cpp  func.h  test.cpp
